tests/ui/err/has-too-many-arguments.stderr
error: level has already been specified
 --> tests/ui/err/has-too-many-arguments.rs:1:28
  |
1 | #[logcall::logcall("info", "error")]
  |                            ^^^^^^^
