tests/ui/err/has-too-many-arguments.rs
#[logcall::logcall("info", "error")]
fn f() {}

fn main() {}
